src/main/java/pl/scisoftware/sample/bad/seqence/api/UnsupportedMethodException.java
package pl.scisoftware.sample.bad.seqence.api;

public class UnsupportedMethodException extends MercuryException {

	private static final long serialVersionUID = -469972870625346L;

	public UnsupportedMethodException(Throwable cause) {
		super(cause);
	}

}
